# originx

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
api/: __init__.py  main.py
api/routes/: __init__.py  baseline.py  config.py  detectors.py  diagnose.py  stream.py  system.py  tasks.py  video.py
api/schemas/: __init__.py  request.py  response.py  task.py  video.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  benchmark.py  config.py  detect.py  report.py  serve.py  task.py  video.py
config/: __init__.py  default.yaml  settings.py
core/: __init__.py  base.py  pipeline.py  registry.py  video_pipeline.py
core/detectors/: __init__.py  baseline_comparison_detector.py  blur_detector.py  brightness_detector.py  color_detector.py  contrast_detector.py  noise_detector.py  occlusion_detector.py  signal_loss_detector.py  stripe_detector.py
core/utils/: __init__.py  image_utils.py  metrics.py  video_utils.py
doc/: 01-系统设计方案.md  02-技术选型分析.md  03-产品规划与改进建议.md  04-单机版系统设计.md  05-后续发展规划.md  06-V1.5版本详细设计.md  07-技术栈演进规划.md  API文档.md  批量检测UI优化方案.md  用户指南.md
examples/: quick_start.py
pic/batch/: index.html
pic/simple/: result.json  viewer.html
reports/: __init__.py  base.py  excel_reporter.py  html_reporter.py  json_reporter.py  pdf_reporter.py  service.py
scheduler/: __init__.py  models.py  scheduler.py  store.py
scheduler/jobs/: __init__.py  batch_detect.py  sample_detect.py  video_detect.py
services/: __init__.py  baseline_service.py  diagnosis_service.py  stream_service.py  video_service.py
storage/: __init__.py
tests/: conftest.py  test_detectors.py  test_pipeline.py  test_video_detectors.py  test_video_pipeline.py
utils/: __init__.py  logger.py  validators.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+25 files in other folders)
